fixed UI of recommended questions and auto-selected batches on admin side

--- a/templates/administration/practice/test_cases.html
+++ b/templates/administration/practice/test_cases.html
@@ -216,9 +216,8 @@ active
                     <div class="modal-body">
                         <div class="mb-3">
                             <label for="inputData" class="form-label">Input Data</label>
-                            <div class="star">*</div>
                             <textarea class="form-control" id="inputData" placeholder="Enter the input here..."
-                                name="input_data" rows="3" required></textarea>
+                                name="input_data" rows="3" ></textarea>
                         </div>
                         <div class="mb-3">
                             <label for="expectedOutput" class="form-label">Expected Output</label>
