--- a/templates/administration/practice/edit_question.html
+++ b/templates/administration/practice/edit_question.html
@@ -54,18 +54,16 @@ active
                                         <label for="assignment_type" class="form-label">Sheets
                                             <div class="star">*</div>
                                         </label>
-                                        <select class="form-select form-control" name="sheet" id="assignment_type"
-                                            multiple>
-
+                                        <select class="form-select form-control" name="sheet" id="assignment_type" multiple>
                                             {% for sheet in sheets %}
-
-                                            <option value="{{ sheet.id }}">{{ sheet.name }}</option>
-
+                                                <option value="{{ sheet.id }}" {% if sheet.id in selected_sheet_ids %}selected{% endif %}>
+                                                    {{ sheet.name }}
+                                                </option>
                                             {% endfor %}
-
                                         </select>
                                     </div>
                                 </div>
+                                
 
 
                                 <div>
