--- a/templates/instructor/sheet/test_cases.html
+++ b/templates/instructor/sheet/test_cases.html
@@ -188,7 +188,7 @@ active
                         <div class="mb-3">
                             <label for="inputData" class="form-label">Input Data</label>
                             <textarea class="form-control" id="inputData" placeholder="Enter the input here..."
-                                name="input_data" rows="5" required></textarea>
+                                name="input_data" rows="5"></textarea>
                         </div>
                         <div class="mb-3">
                             <label for="expectedOutput" class="form-label">Expected Output</label>
