--- a/templates/administration/practice/administrator_problems.html
+++ b/templates/administration/practice/administrator_problems.html
@@ -127,6 +127,15 @@ Problem Set🔥
 
                     <tbody id="questionTableBody">
 
+                        <tr>
+                            <td colspan="10" class="text-center">
+                                <div class="spinner-border text-primary" role="status">
+                                    <span class="visually-hidden">Loading...</span>
+                                </div>
+                            </td>
+                        </tr>
+
+
                     </tbody>
 
                 </table>
