added the w3 logo

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -26,7 +26,7 @@
 
         <div class="powered-by">
             <h5 class="text-white">Powered By</h5>
-            <img src="https://w3grads.com/assets/logo-44ca63025513c8116a3bb05e69891fb438ace2b576cce1e05ade3e20270fff19.png"
+            <img src="{% static 'img/home/w3logo.png' %}"
                 class="logo-img" alt="W3Grads Logo">
         </div>
     </div>
