added the info tag on JSON addition

--- a/templates/administration/practice/test_cases.html
+++ b/templates/administration/practice/test_cases.html
@@ -24,28 +24,38 @@ active
     </nav>
 
     <div class="card">
-        <div class="card-body">
+
+
+        <div class="card-body position-relative">
             <h3 class="heading">
                 <span class="fw-semibold">Test Cases for {{ question.title }}</span>
                 <span class="fs-4"> | 🔥Total: {{ test_cases.count }}🔥</span>
             </h3>
+           
         </div>
 
-        <div class="row">
 
-            <button type="button" class="btn btn-outline-primary button mt-n3 m-3 col-4" data-bs-toggle="modal"
-                data-bs-target="#addTestCaseModal">
-                Add Test Case
-            </button>
+        <div class="row mx-2">
 
-            <button type="button" class="btn btn-outline-warning button mt-n3 m-3 col-3" data-bs-toggle="modal"
-                data-bs-target="#addTestCaseUsingJsonModal">
-                Add Test Case using JSON
-            </button>
+            <div class="col-md-4 mb-3">
+                <button type="button" class="btn btn-outline-primary w-100" data-bs-toggle="modal"
+                    data-bs-target="#addTestCaseModal">
+                    Add Test Case
+                </button>
+            </div>
 
-            <a href="{% url 'driver_code' question.slug %}" class="btn btn-outline-warning button mt-n3 m-3 col-3">
-                Driver Code
-            </a>
+            <div class="col-md-4 mb-3">
+                <button type="button" class="btn btn-outline-warning w-100" data-bs-toggle="modal"
+                    data-bs-target="#addTestCaseUsingJsonModal">
+                    Add Test Case using JSON
+                </button>
+            </div>
+
+            <div class="col-md-4 mb-3">
+                <a href="{% url 'driver_code' question.slug %}" class="btn btn-outline-warning w-100">
+                    Driver Code
+                </a>
+            </div>
 
         </div>
 
@@ -130,7 +140,8 @@ active
                                 {% if test_case.input_data %}
 
                                 <h6 class="fw-semibold mb-1" data-bs-toggle="tooltip" data-bs-placement="top"
-                                    title="{{ test_case.input_data }}">{{ test_case.input_data|linebreaksbr|truncatechars:10 }}</h6>
+                                    title="{{ test_case.input_data }}">{{
+                                    test_case.input_data|linebreaksbr|truncatechars:10 }}</h6>
 
                                 {% else %}
 
@@ -217,7 +228,7 @@ active
                         <div class="mb-3">
                             <label for="inputData" class="form-label">Input Data</label>
                             <textarea class="form-control" id="inputData" placeholder="Enter the input here..."
-                                name="input_data" rows="3" ></textarea>
+                                name="input_data" rows="3"></textarea>
                         </div>
                         <div class="mb-3">
                             <label for="expectedOutput" class="form-label">Expected Output</label>
