--- a/templates/administration/administrator_profile.html
+++ b/templates/administration/administrator_profile.html
@@ -75,6 +75,7 @@
               <button type="submit" class="btn btn-outline-success w-100">
                 Change Password
               </button>
+            </form>
 
           </div>
         </div>
