fixed test cases display error

--- a/templates/administration/practice/test_cases.html
+++ b/templates/administration/practice/test_cases.html
@@ -140,8 +140,7 @@ active
                                 {% if test_case.input_data %}
 
                                 <h6 class="fw-semibold mb-1" data-bs-toggle="tooltip" data-bs-placement="top"
-                                    title="{{ test_case.input_data }}">{{
-                                    test_case.input_data|linebreaksbr|truncatechars:10 }}</h6>
+                                    title="{{ test_case.input_data }}">{{ test_case.input_data|linebreaksbr|truncatechars:10 }}</h6>
 
                                 {% else %}
 
